:pencil: Change variable name

--- a/src/templates/backend/model.js.ejs
+++ b/src/templates/backend/model.js.ejs
@@ -1,6 +1,6 @@
 import Sequelize, { Model } from 'sequelize';
 
-class <%= props.name %> extends Model {
+class <%= props.Name %> extends Model {
   static init(sequelize) {
     super.init(
       {
@@ -15,4 +15,4 @@ class <%= props.name %> extends Model {
   }
 }
 
-export default <%= props.name %>;
+export default <%= props.Name %>;
