--- a/src/templates/frontend/component.js.ejs
+++ b/src/templates/frontend/component.js.ejs
@@ -2,7 +2,7 @@ import React from 'react';
 
 import { Container } from './styles';
 
-export default function <%= props.name %>() {
+export default function <%= props.Name %>() {
   return (
     <Container />
   );
