--- a/src/templates/backend/controllers/controllerSequelize.js.ejs
+++ b/src/templates/backend/controllers/controllerSequelize.js.ejs
@@ -1,5 +1,3 @@
-export default new <%= props.Name %>Controller();
-
 import * as Yup from 'yup';
 import { Op } from 'sequelize';
 import _ from 'underscore';
@@ -41,7 +39,7 @@ class <%= props.Name %>Controller {
     const isSaved = await <%= props.Name %>.findOne({ where: { name } });
 
     if (isSaved) {
-      return res.status(409).json({ error: 'Categoria já cadastrada!' });
+      return res.status(409).json({ error: 'Informação já cadastrada!' });
     }
 
     const <%= props.name %> = await <%= props.Name %>.create(req.body);
@@ -49,7 +47,7 @@ class <%= props.Name %>Controller {
     return <%= props.name %>
       ? res.json({ id: <%= props.name %>.id, name: <%= props.name %>.name })
       : res.status(400).json({
-          error: 'Não foi possível cadastrar a categoria!',
+          error: 'Não foi possível cadastrar!',
         });
   }
 
@@ -60,7 +58,7 @@ class <%= props.Name %>Controller {
 
     return <%= props.name %>
       ? res.status(201).json(<%= props.name %>)
-      : res.status(400).json({ error: 'Categoria não encontrada!' });
+      : res.status(400).json({ error: 'Informação não encontrada!' });
   }
 
   async update(req, res) {
@@ -79,7 +77,7 @@ class <%= props.Name %>Controller {
       const isCreated = await <%= props.Name %>.findOne({ where: { name } });
 
       if (isCreated) {
-        return res.status(409).json({ error: 'Categoria já cadastrada!' });
+        return res.status(409).json({ error: 'Informação já cadastrada!' });
       }
     }
 
@@ -90,7 +88,7 @@ class <%= props.Name %>Controller {
     return updated<%= props.Name %>
       ? res.json(updated<%= props.Name %>)
       : res.status(400).json({
-          error: 'Não foi possível atualizar a categoria!',
+          error: 'Não foi possível atualizar!',
         });
   }
 
